# google-adk-workshop

./: LICENSE  pyproject.toml
.github/: adk-api-reference.md  copilot-instructions.md
basic-agent/: README.md
basic-agent/greeting-agent/: agent.py
stateful_multi_agent/: README.md  auth.py  config.py  database_utils.py  main.py  users.json  utils.py
stateful_multi_agent/customer_service_agent/: agent.py
stateful_multi_agent/customer_service_agent/sub_agents/course_support_agent/: agent.py
