[tool.poetry]
name = "google-adk-workshop"
version = "0.1.0"
description = "Agentic AI workshop with Google"
authors = ["Antonio Tello"]
readme = "README.md"
packages = [{include = "basic-agent"}]

[tool.poetry.dependencies]
python = ">=3.13"
google-adk = ">=1.2.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
ipykernel = ">=6.29.5,<7.0.0"
yfinance = ">=0.2.0,<0.3.0"
litellm = ">=1.0.0,<2.0.0"
deprecated = "^1.2.18"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
